Feat/multi role users (#6)
* feat: support multi-role users with role names

* fix: typecheck error
